[package]
name = "tuisky"
version = "0.0.6"
authors = ["sugyan <sugi1982+github@gmail.com>"]
edition = "2021"
rust-version = "1.74"
description = "TUI client for Bluesky"
readme = "README.md"
repository = "https://github.com/sugyan/tuisky"
license = "MIT"
keywords = ["tui", "atproto", "bluesky", "atrium"]
exclude = ["/config"]

[dependencies]
bsky-sdk = "0.1.6"
chrono = { version = "0.4.38", default-features = false }
clap = { version = "4.5.8", features = ["derive"] }
color-eyre = "0.6.3"
crossterm = { version = "0.27.0", features = ["event-stream", "serde"] }
directories = "5.0.1"
env_logger = "0.11.3"
futures-util = "0.3.30"
indexmap = "2.2.6"
log = "0.4.22"
open = "5.2.0"
ratatui = "0.27"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
textwrap = "0.16.1"
tokio = { version = "1.38.0", features = [
    "macros",
    "rt-multi-thread",
    "sync",
    "time",
] }
toml = "0.8.14"
tui-textarea = "0.5.1"

[dev-dependencies]
ipld-core = "0.4.0"

[[bin]]
name = "tuisky"
path = "src/bin/main.rs"
